--- a/Lab-4/ts.s.1
+++ b/Lab-4/ts.s.1
@@ -6,6 +6,7 @@ auto_start:
        .globl _main,_running,_scheduler
        .globl _proc, _procSize
        .globl _tswitch
+	
         jmpi   start,MTXSEG
 
 start:	mov  ax,cs
@@ -50,18 +51,21 @@ RESUME:
 ! added functions for KUMODE
 	.globl _int80h,_goUmode,_kcinth
 !These offsets are defined in struct proc
-USS =  4
-USP =  6
-
+USS =   4
+USP =   6
 
 _int80h:
-        push ax                 ! save SOME Umode registers in ustack
+        push ax                 ! save all Umode registers in ustack
         push bx
+        push cx
+        push dx
         push bp
+        push si
+        push di
         push es
         push ds
 
-! ustack contains : flag,uCS,uPC, ax,bp,ues,uds
+! ustack contains : flag,uCS,uPC, ax,bx,cx,dx,bp,si,di,ues,uds
         push cs
         pop  ds                 ! KDS now
 
@@ -75,7 +79,7 @@ _int80h:
         mov  ss,ax
 
 ! set sp to HI end of running's kstack[]
-				mov  sp,_running        ! proc's kstack [2 KB]
+	mov  sp,_running        ! proc's kstack [2 KB]
         add  sp,_procSize       ! HI end of PROC
 
         call  _kcinth
@@ -83,13 +87,21 @@ _int80h:
   
 _goUmode:
         cli
-				mov bx,_running 	! bx -> proc
-        mov ax,4[bx]
+	mov bx,_running 	! bx -> proc
+        mov ax,USS[bx]
         mov ss,ax               ! restore uSS
-        mov sp,6[bx]          ! restore uSP
-				pop ds
-				pop es
+        mov sp,USP[bx]          ! restore uSP
+  
+	pop ds
+	pop es
+	pop di
+        pop si
         pop bp
+        pop dx
+        pop cx
         pop bx
-        pop ax             
+        pop ax                  ! NOTE: contains return value to Umode     
+	
         iret
+
+	
